--- a/melanoma/melanoma_trees.Rmd
+++ b/melanoma/melanoma_trees.Rmd
@@ -50,19 +50,11 @@ for (i in c('trees', 'nodes', 'mean.diameter', 'max.tree')){
 }
 ```
 
-```{r, fig.height=4, fig.width=3, }
+```{r, fig.height=4, fig.width=3}
 library(tidyr)
 library(reshape2)
 
 load('shm.rda')
-
-s <- data.frame(mut.type = unlist(cdr3.shm$mut.type), position = unlist(cdr3.shm$position),
-                  cdr3.mut = unlist(cdr3.shm$cdr3.muts), aa.from = unlist(cdr3.shm$n1.aa),
-                  aa.to = unlist(cdr3.shm$n2.aa), 
-                patient_id = rep(cdr3.shm$patient_id, pmax(cdr3.shm$mut.num, 1))) %>%
-  filter(!is.na(aa.to)) %>%
-  merge(codes) %>%
-  mutate( LN = ifelse(tissue == "Regional Lymph Node", 'LNode', 'Other'))
 
 s1 <- s %>% group_by(patient_id, LN, mut.type) %>%
   dplyr::summarise(n = n()) %>%
@@ -72,5 +64,14 @@ s1 <- s %>% group_by(patient_id, LN, mut.type) %>%
 ggplot(s1, aes(x = LN, y = RS_ratio)) + geom_boxplot()
 
 print(t.test(s1$RS_ratio ~ s1$LN)$p.value)
+
+s2 <- s %>% group_by(patient_id, LN, tree.id, child) %>%
+  dplyr::summarise(mut.num = n()) %>%
+  group_by(patient_id, LN, tree.id) %>%
+  dplyr::summarise(mut.num = sum(mut.num)/(n()+1))
+
+ggplot(s2, aes(x = LN, y = mut.num)) + geom_boxplot()
+
+print(t.test(s2$mut.num ~ s2$LN)$p.value)
 ```
 
