--- a/yf/phyl_analyze.Rmd
+++ b/yf/phyl_analyze.Rmd
@@ -9,41 +9,71 @@ Diameter is the largest number of mutations between root and leave.
 Branching is a number of leaves divided by mean length of path from root to leave.
 Total.freq is a sum of frequencies of all vertices of tree.
 
-```{r, warning=FALSE, message=FALSE, fig.height=10}
+```{r, warning=FALSE, message=FALSE}
 library(ggplot2)
 library(stringr)
 library(reshape2)
 library(dplyr)
 library(ggbeeswarm)
+library(ineq)
 
-old_rna = c("Abdulain", "Ilgen", "Mamaev", "Smirnov", "Vlasov")
-young_rna = c("Antipyat", "Epifancev", "Hadjibekov", "Koshkin", "Kovalchuk")
+load('~/yf/clones.rda')
 
-gs <- data.frame()
+gs <- mutate_each(clones, funs(as.double(.)), -root, -cdr3aa, -sample, -single) %>%
+  mutate(cdr3aa = as.character(cdr3aa), 
+         proj = ifelse(sample %in% c("Abdulain", "Ilgen", "Mamaev", "Smirnov", "Vlasov"), 'old', 'young'))
 
-for (sample in old_rna){
-  .df <- read.table(paste('~/yf/trees/stat/yf_old_RNA/', sample, ".txt", sep = ""), header=T, sep="\t")
-	.df$proj <- "old"
-	.df$sample <- sample
-	gs <- rbind(gs, .df)
+mtr <- gs %>% group_by(proj, sample) %>%
+  dplyr::summarise(d0 = sum(nodes), d0.9 = sum(nodes**0.9)**10, 
+            d2 = sum(nodes**2)**(-1), d100 = sum(nodes**100)**(-0.01),
+            Gini = ineq(nodes, type='Gini'), trees=n(), big=sum(nodes>6),
+            big.ratio = big/trees, mean.root.mut = mean(root.mut),
+            mean.tot.mut = mean(total.mut), singlet=trees-sum(single),
+            single.ratio = singlet/trees, cdr3len = mean(nchar(cdr3aa)))
+
+gs.big <- gs %>% filter(nodes>5) %>% group_by(proj, sample) %>%
+  dplyr::summarise(big.nodes=sum(nodes))
+
+mtr <- merge(mtr, gs.big) %>%
+  mutate(big.nodes.ratio = big.nodes/d0)
+
+mtr <- melt(mtr, id.vars=c('proj', 'sample'))
+
+for (i in unique(mtr$variable)){
+  cat(i, 't-Test p-value\n', t.test(value ~ proj, subset(mtr, variable==i))$p.value, '\n')
 }
 
-for (sample in young_rna){
-	.df <- read.table(paste('~/yf/trees/stat/yf_young_RNA/', sample, ".txt", sep = ""), header=T, sep="\t")
-	.df$proj <- "young"
-	.df$sample <- sample
-	gs <- rbind(gs, .df)
-}
+significant=c('d100', 'Gini')
+ggplot(filter(mtr, variable %in% significant), aes(x=proj, y = value, fill=proj)) + geom_boxplot() + 
+  facet_wrap(~variable, scales = "free_y") +
+  xlab("") + ylab("") +
+  scale_fill_brewer("", palette = "Set1") +
+  theme_bw() +
+  labs(fill='') 
+```
 
-gs <- mutate_each(gs, funs(as.double(.)), -cdr3nt, -proj, -sample, -single)
+Phylogenetic characteristics of clonal forests do not differ significantly.
+```{r}
+ggplot(filter(mtr, variable %in% c('d0', 'trees', 'singlet', 'single.ratio')), aes(x=proj, y = value, fill=proj)) + 
+  geom_boxplot() + 
+    facet_wrap(~variable, ncol=2, scales = "free_y") +
+    xlab("") + ylab("") +
+    scale_fill_brewer("", palette = "Set1") +
+    theme_bw() +
+    labs(fill='')
+```
 
-gs2 <- gs %>% melt(id=c('root', 'cdr3nt', 'proj', 'sample')) %>% 
+
+
+```{r, warning=FALSE, message=FALSE, fig.height=10}  
+gs2 <- filter(gs, nodes>3) %>% melt(id=c('root', 'cdr3aa', 'proj', 'sample')) %>% 
   mutate(name=paste(str_sub(proj, 1, 1), str_sub(sample,1, 3), sep='.')) %>%
   filter(variable != 'total.nodes' & variable != 'mean.path')
-  
+
 first = c('freq', 'freq.sum', 'leaves', 'root.mut', 'diameter', 'total.mut', 'mean.degree')
 
-ggplot(filter(gs2, variable %in% first)) + geom_quasirandom(aes(x = name, y = value, group=proj, fill = proj), varwidth = TRUE, shape=21, color="black") +
+ggplot(filter(gs2, variable %in% first)) + 
+  geom_quasirandom(aes(x = name, y = value, group=proj, fill = proj), varwidth = TRUE, shape=21, color="black") +
 facet_wrap(~variable, nrow=4, scales='free') +
 scale_fill_brewer("", palette = "Set1") +
 theme_bw() +
@@ -58,35 +88,6 @@ for (i in first){
 ```
 
 
-
-```{r, warning=FALSE, message=FALSE, fig.height=3, fig.width=3, fig.show = 'hold'}
-gs3 <- gs2 %>% dplyr::group_by(sample, proj) %>% dplyr::summarise(n = n())
-ggplot(gs3) + geom_boxplot(aes(x = proj, y = n)) + ggtitle('Total number of clonal families')
-
-t.test(n ~ proj, gs3)
-```
-
-
-```{r, warning=FALSE, message=FALSE, fig.height=3, fig.width=3, fig.show = 'hold'}
-gs4 <- gs %>% mutate(single = ifelse(single==TRUE, 'single', 'tree')) %>% 
-  dplyr::group_by(sample, proj, single) %>% dplyr::summarise(n = n()) %>%
-  dcast(sample + proj ~ single)
-ggplot(gs4, aes(x=proj, y = single/tree)) + geom_boxplot() + ggtitle('Single clones number to clonal trees number')
-
-t.test(single/tree ~ proj, gs4)
-```
-
-
-```{r, warning=FALSE, message=FALSE, fig.height=3, fig.width=3, fig.show = 'hold'}
-gs4.1 <- gs %>% mutate(single = ifelse(single==TRUE, 'single', 'tree')) %>% 
-  dplyr::group_by(sample, proj, single) %>% dplyr::summarise(n = sum(freq.sum)) %>%
-  dcast(sample + proj ~ single)
-ggplot(gs4.1, aes(x=proj, y = single/tree)) + geom_boxplot() + ggtitle('Single clones total frequency to clonal trees total frequency')
-
-t.test(single/tree ~ proj, gs4.1)
-```
-
-
 ```{r}
 gs4.2 <- gs %>% mutate(name=paste(str_sub(proj, 1, 1), str_sub(sample,1, 3), sep='.'))
 ggplot(gs4.2, aes(x = single, y = root.mut, fill=proj)) + geom_boxplot() + ggtitle('SHM number in root') +
@@ -94,4 +95,17 @@ theme(axis.text.x = element_text(angle = 45, hjust = 1))
 
 a <- aov(root.mut~ single * proj, gs4.2)
 summary(a)
+```
+
+
+```{r}
+gs$cdr3aa.len <- nchar(gs$cdr3aa)
+gs.5 <- gs %>% dplyr::select(proj, sample, cdr3aa.len, root.mut) %>%
+  melt(id.vars = c('proj', 'sample'))
+                      
+ggplot(gs.5, aes(x = value, color=proj)) + 
+  geom_density() + 
+  facet_wrap(~variable) +
+  scale_fill_brewer("", palette = "Set1") + 
+  theme_bw()
 ```
